Solve compilation related issues